# Fastapi-React-finance-management-app

./: README.md  how
backend/: Dockerfile  docker-compose.yml  ma1n.py  pyproject.toml
backend/alembic/: env.py
backend/auth/: auth_repo.py  auth_routers.py  helpers.py  jwt_exceptions.py
backend/auth/scheme/: __init__.py  token_scheme.py  user_scheme.py
backend/auth/services/: __init__.py  authentication_service.py  authorization_service.py
backend/auth/token_utils/: __init__.py  token_decoder.py  token_issuer.py
backend/core/: AbstractRepository.py  AbstractService.py  __init__.py
backend/core/configs/: __init__.py  db_config.py  settings_conf.py
backend/main/: exceptions.py
backend/main/models/: __init__.py  base_model.py  category.py  expense.py  user.py
backend/main/repositories/: BaseRepo.py  CategoryRepo.py  ExpenseRepo.py  UserRepo.py  __init__.py
backend/main/routers/: __init__.py  category_routers.py  expenses_routers.py  user_routers.py
backend/main/schemas/: __init__.py  category_scheme.py  expense_scheme.py
backend/main/utils/: helpers.py
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: AddCategory.jsx  AddExpense.jsx  CategoriesPallet.jsx  Category.jsx  EditExpense.jsx  Expenses.jsx
frontend/src/contexts/: PageContext.jsx
frontend/src/data/: categories.js
frontend/src/features/: AddCategory.jsx  AddExpense.jsx  CategoriesPallet.jsx  EditExpense.jsx  Expenses.jsx
frontend/src/hooks/: useGetLocalStorage.js
(+16 files in other folders)
